# akasha-events

./: README.md  TREE.txt  pyproject.toml  repo-manifest.yaml  schemas_placeholder.txt
akasha_events/: __init__.py
akasha_events.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
akasha_events/cli/: main.py
akasha_events/storage/: schema.sql  sqlite.py
docs/: AKASHA_INSTRUMENT_PAPER.md  ARCHITECTURE.md  INTEGRATION.md  event_model.md
examples/: bigfoot_sighting.json  example_event.json  solar_flare.json
ingest/: ingest_event.py
schemas/: event.schema.json
tests/: test_storage_smoke.py
